tests/baselines/reference/parser553699.errors.txt
==== tests/cases/compiler/parser553699.ts (1 errors) ====
    class Foo {
      constructor() { }
      public banana (x: public) { }
                        ~~~~~~
!!! parser553699.ts(3,21): error TS2095: Cannot find name 'public'.
    }
    
    class Bar {
      constructor(c: Bar) { }
    }